crates/oxc_react_compiler/tests/snapshots/idx-no-outlining.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/idx-no-outlining.js
---
import { c as _c } from "react/compiler-runtime";
// @customMacros:"idx"
import idx from "idx";
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] !== props) {
		t0 = idx(props, (_) => _.group.label);
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const groupName = t0;
	let t1;
	if ($[2] !== groupName) {
		t1 = <div>{groupName}</div>;
		$[2] = groupName;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
