crates/oxc_react_compiler/tests/snapshots/ignore-inner-interface-types.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ignore-inner-interface-types.ts
---
function Foo() {
	return 0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: []
};
