crates/oxc_react_compiler/tests/snapshots/ignore-use-no-forget.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ignore-use-no-forget.js
---
// @ignoreUseNoForget
function Component(prop) {
	"use no forget";
	const result = prop.x.toFixed();
	return <div>{result}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ x: 1 }]
};
