crates/oxc_react_compiler/tests/snapshots/iife-inline-ternary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/iife-inline-ternary.js
---
function Component(props) {
	props.foo ? 1 : _temp();
	return items;
}
function _temp() {
	throw new Error("Did not receive 1");
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ foo: true }]
};
