crates/oxc_react_compiler/tests/snapshots/iife-return-modified-later.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/iife-return-modified-later.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let items;
	if ($[0] !== props.a) {
		items = [];
		items.push(props.a);
		$[0] = props.a;
		$[1] = items;
	} else {
		items = $[1];
	}
	return items;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: {} }]
};
